# swtor-scripts

./: archive_combat_logs.ipynb  pyproject.toml  scrape_guild_log.ipynb
